# Sem5

./: README.md  Sem5.code-workspace
PAI/lab1/: galeria.php  index.php  typy.php
PAI/lab10/: index.php
PAI/lab11/: index.php
PAI/lab2/: formularz.html  odbierz.php  odbierz2.php
PAI/lab2_2/: formularz2.php  odbierz3.php
PAI/lab2_3/: formularz3.php  klient.php  odbierz4.php
PAI/lab2_4/: formularz.php
PAI/lab3/: dane.txt  funkcje.php  pliki.php
PAI/lab3_2/: zdjecia.html  zdjecia.php  zdjecia2.php
PAI/lab4/: dane.txt  funkcje.php  pliki.php
PAI/lab4_3/: ankieta.php  ankieta.txt
PAI/lab5/: index.php  users.json  users.xml
PAI/lab6/: funkcje.php  index.php
PAI/lab7/: index.php  test1.php  test2.php  test3.php  test4.php
PAI/lab8/: processLogin.php  testLogin.php
PAI/lab9/: Baza.php  DirTrav.php  csrf.html  css.php  delete.php  haslo.php  inclusion.php  polaczenie.php  sesja.php  sql.php
cpplab/kolos1/: zad1.cpp  zad2.cpp  zad3.cpp
cpplab/lab1/: Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main  main.cpp  run.sh
cpplab/lab10/: main  main.cpp
cpplab/lab10_1/: main  main.cpp
cpplab/lab10_2/: main  main.cpp
cpplab/lab10_3/: main  main.cpp
cpplab/lab10_4-5/: dane.txt  main  main.cpp  main2.cpp
cpplab/lab11/: main  main.cpp
cpplab/lab11_1/: main  main.cpp
cpplab/lab11_2/: main  main.cpp
cpplab/lab11_3/: main  main.cpp
cpplab/lab12/: main  main.cpp
cpplab/lab12_1/: main.cpp
cpplab/lab12_2/: Car.cpp  Car.h  main  main.cpp
cpplab/lab13t/: CMakeLists.txt
zio/: ZaawIO.vpp  ZaawIO.vpp.bak_000f
(+218 files in other folders)
